made the remaining services, entities, and DTOs compatible and lastly the controllers.some changes are needed to make but this is all so far.